--- a/MultiServiceBrowser/MultiServiceBrowser.csproj
+++ b/MultiServiceBrowser/MultiServiceBrowser.csproj
@@ -14,6 +14,8 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -68,8 +70,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="favicon.cs" />
     <Compile Include="uiNewSite.xaml.cs">
       <DependentUpon>uiNewSite.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="src\ui\uiPageBrowser.xaml.cs">
+      <DependentUpon>uiPageBrowser.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -85,6 +91,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="uiNewSite.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="src\ui\uiPageBrowser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -127,6 +137,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Plus_64px.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Help_64px.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
